--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -2,77 +2,96 @@ $font-sans: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 $grey: hsla(0, 0, 75%, 0.5);
 
 * {
-  &,
-  &:before,
-  &:after {
-    box-sizing: border-box;
-  }
+	&,
+	&:before,
+	&:after {
+		box-sizing: border-box;
+	}
 }
 
 body {
-  max-width: 52em;
-  padding: 0 1em;
-  margin: 0 auto;
-  font-family: sans-serif;
-  font-family: $font-sans;
-  line-height: 2;
+	max-width: 100%;
+	padding: 0 1em;
+	margin: 0 auto;
+	font-family: sans-serif;
+	font-family: $font-sans;
+	line-height: 2;
 }
 
 a {
-  color: inherit;
-  text-decoration: none;
+	color: inherit;
+	text-decoration: none;
 }
 
 nav {
-  display: flex;
-  a,
-  button {
-    padding: 1em 0;
-    border: 0;
-    &:not(:last-child) {
-      margin-right: 1em;
-    }
-    &:first-child {
-      margin-right: auto;
-    }
-  }
+	display: flex;
+	align-items: center;
+	position: relative;
+	background-color: lightgray;
+	a,
+	button {
+		padding: 1em 0;
+		border: 0;
+		&:not(:last-child) {
+			margin-right: 1em;
+		}
+		&:first-child {
+			margin-right: auto;
+		}
+		img {
+			height: 80px;
+			width: 150px;
+			margin: auto;
+		}
+	}
 }
 
 h1,
 h2,
 h3,
 p {
-  margin: 0;
-  line-height: inherit;
-  &:not(:last-child) {
-    margin-bottom: 1rem;
-  }
+	margin: 0;
+	line-height: inherit;
+	&:not(:last-child) {
+		margin-bottom: 1rem;
+	}
 }
 
 img {
-  width: 100%;
-  max-width: 100%;
+	width: 100%;
+	max-width: 100%;
 }
 
 form {
-  display: flex;
-  flex-direction: column;
+	display: flex;
+	flex-direction: column;
 }
 
 input,
 textarea,
 button,
 .btn {
-  padding: 1em;
-  border: 1px solid $grey;
-  border-radius: 0;
-  margin-bottom: 1em;
-  font: inherit;
-  color: inherit;
-  background-color: transparent;
+	padding: 1em;
+	border: 1px solid $grey;
+	border-radius: 0;
+	margin-bottom: 1em;
+	font: inherit;
+	color: inherit;
+	background-color: transparent;
+}
+
+footer {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	background-color: grey;
+
+	img {
+		width: 20px;
+	}
 }
 
 textarea {
-  min-height: 8em;
-  resize: vertical;
+	min-height: 8em;
+	resize: vertical;
 }
