--- a/views/sign-up.hbs
+++ b/views/sign-up.hbs
@@ -1,10 +1,25 @@
-<form action="/authentication/sign-up" method="POST">
-  <label for="input-name">Name</label>
-  <input type="text" id="input-name" name="name" placeholder="Your Name" />
-  <label for="input-email">Email</label>
-  <input type="email" id="input-email" name="email" placeholder="Your Email" />
-  <label for="input-password">Password</label>
-  <input type="password" name="password" id="input-password" placeholder="A Strong Password" />
-  <button>Sign Up</button>
-</form>
-<a href="/authentication/github">Sign Up with GitHub</a>
+<div class="signUpMain">
+  <div class="imageSignUp"><img src="/images/dy play one color.png" alt="logo"></div>
+
+
+  <form action="/authentication/sign-up" method="POST" enctype="multipart/form-data">
+    <div>
+      <div class="signUpName">
+        <label for="input-name">Name</label>
+        <input type="text" id="input-name" name="name" placeholder="Your Name" />
+        <label for="input-email">Email</label>
+        <input type="email" id="input-email" name="email" placeholder="Your Email" />
+        <label for="input-password">Password</label>
+        <input type="password" name="password" id="input-password" placeholder="A Strong Password" />
+      </div>
+      <div>
+        <label for="input-picture">Profile picture</label>
+        <input type="file" accept="image/*" id="input-picture" name="picture" />
+      </div>
+      <div>
+        <button>Sign Up</button>
+      </div>
+    </div>
+  </form>
+  <a href="/authentication/github">Sign Up with GitHub</a>
+</div>
