--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -2,9 +2,10 @@
   box-sizing: border-box; }
 
 body {
-  max-width: 100%;
+  min-width: 100%;
+  width: 100%;
   padding: 0;
-  margin: 0 auto;
+  margin: 0;
   font-family: sans-serif;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   line-height: 2; }
@@ -71,7 +72,11 @@ footer {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  background-color: grey; }
+  background-color: grey;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 30px; }
   footer img {
     width: 20px; }
     footer img:last-child {
@@ -79,15 +84,26 @@ footer {
 
 .signUpMain {
   display: flex;
-  flex-direction: column; }
+  flex-direction: column;
+  padding-bottom: 10px; }
+  .signUpMain button {
+    margin: auto;
+    padding: 10px 20px; }
   .signUpMain .imageSignUp {
     max-width: 300px;
     align-self: center; }
   .signUpMain .signUpName {
     display: flex;
     flex-direction: column; }
-  .signUpMain form {
+  .signUpMain .formMain {
+    align-items: center;
+    justify-content: space-evenly;
+    display: flex;
     flex-direction: row; }
+  .signUpMain .inputPicture {
+    align-self: flex-start;
+    display: flex;
+    flex-direction: column; }
 
 textarea {
   min-height: 8em;
