--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -10,9 +10,10 @@ $grey: hsla(0, 0, 75%, 0.5);
 }
 
 body {
-	max-width: 100%;
+	min-width: 100%;
+	width: 100%;
 	padding: 0;
-	margin: 0 auto;
+	margin: 0;
 	font-family: sans-serif;
 	font-family: $font-sans;
 	line-height: 2;
@@ -86,6 +87,10 @@ footer {
 	flex-direction: row;
 	justify-content: space-between;
 	background-color: grey;
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+	height: 30px;
 
 	img {
 		&:last-child {
@@ -98,6 +103,11 @@ footer {
 .signUpMain {
 	display: flex;
 	flex-direction: column;
+	padding-bottom: 10px;
+	button {
+		margin: auto;
+		padding: 10px 20px;
+	}
 	.imageSignUp {
 		max-width: 300px;
 		align-self: center;
@@ -106,8 +116,16 @@ footer {
 		display: flex;
 		flex-direction: column;
 	}
-	form {
+	.formMain {
+		align-items: center;
+		justify-content: space-evenly;
+		display: flex;
 		flex-direction: row;
+	}
+	.inputPicture {
+		align-self: flex-start;
+		display: flex;
+		flex-direction: column;
 	}
 }
 
