--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -116,7 +116,8 @@ footer {
 		display: flex;
 		flex-direction: column;
 	}
-	.formMain {
+	.formMain,
+	.gameYouPlay {
 		align-items: center;
 		justify-content: space-evenly;
 		display: flex;
