--- a/views/sign-up.hbs
+++ b/views/sign-up.hbs
@@ -17,6 +17,9 @@
         <input type="file" accept="image/*" id="input-picture" name="picture" />
       </div>
     </div>
+    <div class="gameYouPlay">
+      <h2>Game You Play</h2>
+    </div>
     <button>Sign Up</button>
   </form>
 </div>
