--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -68,20 +68,6 @@ button,
   color: inherit;
   background-color: transparent; }
 
-footer {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  background-color: grey;
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 30px; }
-  footer img {
-    width: 20px; }
-    footer img:last-child {
-      margin-right: 0.5em; }
-
 .signUpMain {
   display: flex;
   flex-direction: column;
@@ -101,6 +87,8 @@ footer {
     justify-content: space-evenly;
     display: flex;
     flex-direction: row; }
+  .signUpMain .gameYouPlay {
+    flex-direction: column; }
   .signUpMain .inputPicture {
     align-self: flex-start;
     display: flex;
@@ -109,5 +97,19 @@ footer {
 textarea {
   min-height: 8em;
   resize: vertical; }
+
+footer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  background-color: grey;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 30px; }
+  footer img {
+    width: 20px; }
+    footer img:last-child {
+      margin-right: 0.5em; }
 
 /*# sourceMappingURL=style.css.map */
