--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -82,24 +82,6 @@ button,
 	background-color: transparent;
 }
 
-footer {
-	display: flex;
-	flex-direction: row;
-	justify-content: space-between;
-	background-color: grey;
-	position: absolute;
-	bottom: 0;
-	width: 100%;
-	height: 30px;
-
-	img {
-		&:last-child {
-			margin-right: 0.5em;
-		}
-		width: 20px;
-	}
-}
-
 .signUpMain {
 	display: flex;
 	flex-direction: column;
@@ -123,6 +105,9 @@ footer {
 		display: flex;
 		flex-direction: row;
 	}
+	.gameYouPlay {
+		flex-direction: column;
+	}
 	.inputPicture {
 		align-self: flex-start;
 		display: flex;
@@ -133,4 +118,22 @@ footer {
 textarea {
 	min-height: 8em;
 	resize: vertical;
+}
+
+footer {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	background-color: grey;
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+	height: 30px;
+
+	img {
+		&:last-child {
+			margin-right: 0.5em;
+		}
+		width: 20px;
+	}
 }
