--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -88,11 +88,22 @@ button,
     display: flex;
     flex-direction: row; }
   .signUpMain .gameYouPlay {
-    flex-direction: column; }
+    flex-direction: column;
+    margin: 0 20%; }
+  .signUpMain .listGamesSignUp {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center; }
+    .signUpMain .listGamesSignUp .formInline {
+      padding: 0 0.8em; }
   .signUpMain .inputPicture {
     align-self: flex-start;
     display: flex;
     flex-direction: column; }
+  .signUpMain .mapSignUp {
+    margin: 50px;
+    max-width: 850px;
+    align-self: center; }
 
 textarea {
   min-height: 8em;
@@ -104,7 +115,6 @@ footer {
   justify-content: space-between;
   background-color: grey;
   position: absolute;
-  bottom: 0;
   width: 100%;
   height: 30px; }
   footer img {
