--- a/views/sign-up.hbs
+++ b/views/sign-up.hbs
@@ -2,7 +2,7 @@
   <div class="imageSignUp"><img src="/images/dy play one color.png" alt="logo"></div>
 
 
-  <form action="/authentication/sign-up" method="POST" enctype="multipart/form-data">
+  <form action="/authentication/sign-up" method="POST">
     <div class="formMain">
       <div class="signUpName">
         <label for="input-name">Name</label>
