--- a/views/channels/create.hbs
+++ b/views/channels/create.hbs
@@ -6,7 +6,7 @@
   <input type="text" name="name" id="input-name" placeholder="Channel Name">
   <label for="desciption">Desciption</label>
   <textarea name="description" id="description" placeholder=" Desciption of the channel"></textarea>
-  <label for="image">Image</label>
-  <input type="file" name="image" id="image" accept="image/*" multiple />
+  <label for="picture">Picture</label>
+  <input type="file" name="picture" id="picture" accept="image/*" multiple />
   <button>Create Channel</button>
 </form>
