--- a/views/encounter/create.hbs
+++ b/views/encounter/create.hbs
@@ -16,18 +16,18 @@
   </div>
   
   <div class="form-group">
-    <label for="eventDate"> Event Date </label>
-    <input type="datetime-local" name='eventDate' id='eventDate' required class="form-control">
+    <label for="date"> Event Date </label>
+    <input type="datetime-local" name='date' id='date' required class="form-control">
   </div>
 
   <div class="form-group">
-    <label for="playerNumber"> Number of Players </label>
-    <input type="number" name='playerNumber' id='playerNumber' min="2" required value="2" class="form-control">
+    <label for="numberOfPlayer"> Number of Players </label>
+    <input type="number" name='numberOfPlayer' id='numberOfPlayer' min="2" required value="2" class="form-control">
   </div>
 
   <div class="form-group">
-    <label for="gameSelection"> Select your Game </label>
-    <input type="text" name='gameSelection' id='gameSelection' required class="form-control">
+    <label for="gameList"> Select your Game </label>
+    <input type="text" name='gameList' id='gameList' required class="form-control">
   </div>
 
   
