--- a/views/encounter/single.hbs
+++ b/views/encounter/single.hbs
@@ -1,1 +1,9 @@
 <h1>here will show each single encounter</h1>
+<p>eventName: {{eventName}}</p>
+<p>host: {{host}}</p>
+<p>location: {{location}}</p>
+<p>date: {{date}}</p>
+<p>numberOfPlayer: {{numberOfPlayer}}</p>
+<p>waitingList: {{ waitingList}}</p>
+<p>game: {{gameList}}</p>
+<p>comments: {{ comments }}</p>
