--- a/views/encounter/single.hbs
+++ b/views/encounter/single.hbs
@@ -1,9 +1,14 @@
-<h1>here will show each single encounter</h1>
-<p>eventName: {{eventName}}</p>
-<p>host: {{host}}</p>
-<p>location: {{location}}</p>
-<p>date: {{date}}</p>
-<p>numberOfPlayer: {{numberOfPlayer}}</p>
-<p>waitingList: {{ waitingList}}</p>
-<p>game: {{gameList}}</p>
-<p>comments: {{ comments }}</p>
+
+<ul class="list-group-flush">
+  <li class="list-group-item"><p>eventName: {{eventName}}</p></li>
+  <li class="list-group-item"><p>host: {{host}}</p></li>
+  <li class="list-group-item"><p>location: {{location}}</p></li>
+  <li class="list-group-item"><p>date: {{date}}</p></li>
+  <li class="list-group-item"><p>numberOfPlayer: {{numberOfPlayer}}</p></li>
+  <li class="list-group-item"><p>waitingList: {{ waitingList}}</p></li>
+  <li class="list-group-item"><p>game: {{gameList}}</p></li>
+  <li class="list-group-item"><p>comments: {{ comments }}</p></li>
+  <li class="list-group-item"></li><br></li>
+  <li class="list-group-item"><a href="/encounter/{{ _id }}/edit" class="btn btn-outline-success"> edit </a></li>
+  <li class="list-group-item"><form action="/encounter/{{ _id }}/delete" method="POST"><button class="btn btn-outline-danger"> delete </button></form></li>
+</ul>
