--- a/views/channels/singleview.hbs
+++ b/views/channels/singleview.hbs
@@ -1,4 +1,9 @@
 <h1>
   Channel single view
-  
 </h1>
+
+{{#each data}}
+{{name}}
+{{description}}
+<img src="{{picture}}" alt="{{name}}">
+{{/each}}
