--- a/views/channels/create.hbs
+++ b/views/channels/create.hbs
@@ -4,7 +4,7 @@
 <form method="POST" enctype="multipart/form-data">
   <label for="input-name">Channel Name</label>
   <input type="text" name="name" id="input-name" placeholder="Channel Name">
-  <label for="desciption">Desciption</label>
+  <label for="description">Desciption</label>
   <textarea name="description" id="description" placeholder=" Desciption of the channel"></textarea>
   <label for="picture">Picture</label>
   <input type="file" name="picture" id="picture" accept="image/*" multiple />
