--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,6 +1,17 @@
 *, *:before, *:after {
   box-sizing: border-box; }
 
+input,
+textarea,
+button,
+.btn {
+  border: 1px solid rgba(191, 191, 191, 0.5);
+  border-radius: 1em;
+  margin-bottom: 1em;
+  font: inherit;
+  color: inherit;
+  background-color: transparent; }
+
 body {
   width: 100%;
   font-family: sans-serif;
@@ -29,21 +40,20 @@ nav {
   position: relative;
   background-color: lightgray;
   width: 100%; }
-  nav a,
-  nav button {
-    border: 0;
-    margin-right: 2em; }
-    nav a:not(:last-child),
-    nav button:not(:last-child) {
-      margin-right: 3em; }
-    nav a:first-child,
-    nav button:first-child {
-      margin-right: auto; }
-    nav a img,
-    nav button img {
-      height: 80px;
-      width: 150px;
-      margin: auto; }
+  nav a:not(:last-child),
+  nav button:not(:last-child) {
+    margin-right: 3em; }
+  nav a:first-child,
+  nav button:first-child {
+    margin-right: auto; }
+  nav a button,
+  nav button button {
+    margin: 100px; }
+  nav a img,
+  nav button img {
+    height: 80px;
+    width: 150px;
+    margin: auto; }
 
 h1,
 h2,
@@ -64,18 +74,6 @@ img {
 form {
   display: flex;
   flex-direction: column; }
-
-input,
-textarea,
-button,
-.btn {
-  padding: 1em;
-  border: 1px solid rgba(191, 191, 191, 0.5);
-  border-radius: 0;
-  margin-bottom: 1em;
-  font: inherit;
-  color: inherit;
-  background-color: transparent; }
 
 .signUpMain {
   display: flex;
@@ -114,18 +112,24 @@ button,
     max-width: 850px;
     align-self: center; }
 
+.signInMain {
+  margin: 0 20%; }
+
 textarea {
   min-height: 8em;
   resize: vertical; }
 
+.imageSignIn {
+  max-width: 300px;
+  align-self: center;
+  margin: 0 auto; }
+
 footer {
-  bottom: 0em;
   display: flex;
-  align-content: flex-end;
   flex-direction: row;
   justify-content: space-between;
   background-color: grey;
-  position: absolute;
+  position: relative;
   width: 100%;
   height: 30px; }
   footer img {
