--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -15,7 +15,7 @@
     {{#if user}}
     <a href="/">{{user.name}}'s Profile</a>
     <form action="/authentication/sign-out" method="POST">
-      <button>Sign Out</button>
+      <button> Log Out</button>
     </form>
     {{else}}
     <a href="/authentication/sign-in">Log In</a>
