--- a/views/sign-in.hbs
+++ b/views/sign-in.hbs
@@ -1,8 +1,14 @@
-<form action="/authentication/sign-in" method="POST">
-  <label for="input-email">Email</label>
-  <input type="email" id="input-email" name="email" placeholder="Your Email" />
-  <label for="input-password">Password</label>
-  <input type="password" name="password" id="input-password" placeholder="A Strong Password" />
-  <button>Sign In</button>
-</form>
-<a href="/authentication/github">Sign In with GitHub</a>
+<div class="imageSignIn"><img src="/images/dy play one color.png" alt="logo"></div>
+<div class="signInMain">
+  <form action="/authentication/sign-in" method="POST">
+    <label for="input-email">Email</label>
+    <input type="email" id="input-email" name="email" placeholder="Your Email" />
+    <label for="input-password">Password</label>
+    <input type="password" name="password" id="input-password" placeholder="A Strong Password" />
+    <button>Sign In</button>
+  </form>
+
+
+  <a href="#">Sign In with Google</a>
+
+</div>
