--- a/views/encounter/single.hbs
+++ b/views/encounter/single.hbs
@@ -7,8 +7,40 @@
   <li class="list-group-item"><p>numberOfPlayer: {{numberOfPlayer}}</p></li>
   <li class="list-group-item"><p>waitingList: {{ waitingList}}</p></li>
   <li class="list-group-item"><p>game: {{gameList}}</p></li>
-  <li class="list-group-item"><p>comments: {{ comments }}</p></li>
   <li class="list-group-item"></li><br></li>
   <li class="list-group-item"><a href="/encounter/{{ _id }}/edit" class="btn btn-outline-success"> edit </a></li>
-  <li class="list-group-item"><form action="/encounter/{{ _id }}/delete" method="POST"><button class="btn btn-outline-danger"> delete </button></form></li>
+  <li class="list-group-item"><form action="/encounter/single/{{ _id }}/delete" method="POST"><button class="btn btn-outline-danger"> delete </button></form></li>
 </ul>
+
+
+<section class='formEdit'>
+  <h4 class='text-secondary'>Reviews</h2>
+  <div class="card">
+    <div class="card-body">
+      {{#each comments}}
+            <div>
+              <p class="card-text">{{this.comment}}</p>
+              <h6 class="card-subtitle mb-2 text-muted">{{this.player}}</h6>
+              <form action="/encounter/single/{{ id }}/deleteReview" method="POST"><button class="btn btn-outline-danger"> delete {{id}} </button></form>
+            </div>
+      {{/each}}
+    </div>
+  </div>
+
+
+  <form action="/encounter/single/addComment?event_id={{ _id }}" method="post">
+  <h5 class="form-text text-muted"> Add a Comment </h5>
+    <div class="form-group">
+      <label for="player" class='text-secondary'>Player:</label>
+      <input type="text" name="player" class="form-control"/>
+    </div>
+
+   <div class="form-group">
+      <label for="comment" class='text-secondary'>Comment:</label>
+      <textarea type="text" name="comment" class="form-control"></textarea>
+    </div>
+
+    <button type="submit" class="btn btn-outline-primary card-link">ADD</button>
+  </form>
+</section>
+
