--- a/views/encounter/index.hbs
+++ b/views/encounter/index.hbs
@@ -3,6 +3,7 @@
 {{#each encounters}}
 <a href="/encounter/single/{{ _id }}">
 <div style="margin-bottom: 2em;">
+
 <li class="list-group-item"> eventName: {{eventName}}</li>
 <li class="list-group-item">host: {{host}}</li>
 <li class="list-group-item">location: {{location}}</li>
@@ -10,8 +11,8 @@
 <li class="list-group-item">numberOfPlayer: {{numberOfPlayer}}</li>
 <li class="list-group-item">waitingList: {{ waitingList}}</li>
 <li class="list-group-item">game: {{gameList}}</li>
-<li class="list-group-item">comments: {{ comments }}</li>
 
-</div></a>
+</div>
+</a>
 {{/each}}
 </ul>
