--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -17,14 +17,14 @@ button,
 	border-radius: 1em;
 	margin-bottom: 1em;
 	font: inherit;
-	color: inherit;
+	color: black;
 	background-color: transparent;
 }
 
 body {
-	width: 100%;
+	// width: 100%;
+	height: 100%;
 	font-family: sans-serif;
-	font-family: $font-sans;
 	line-height: 2;
 }
 
@@ -34,11 +34,9 @@ body {
 	align-content: center;
 	.imageSignUp {
 		display: flex;
-		align-content: center;
 	}
 	img {
 		width: 30%;
-		justify-self: flex-end;
 		margin: 0 auto;
 	}
 }
@@ -54,16 +52,25 @@ nav {
 	position: relative;
 	background-color: lightgray;
 	width: 100%;
+	padding: 0 50px;
 	a,
 	button {
+		display: flex;
+		margin-right: 2em;
+		margin: auto;
 		&:not(:last-child) {
-			margin-right: 3em;
+			margin: 0 50px;
+		}
+		&:not(:first-child) {
+			margin: 1em;
+			padding: 0px;
 		}
 		&:first-child {
 			margin-right: auto;
 		}
 
 		img {
+			align-self: flex-start;
 			height: 80px;
 			width: 150px;
 			margin: auto;
