important changes in app.js and tha channels, posts, comments get and post routes done

--- a/views/channels/edit.hbs
+++ b/views/channels/edit.hbs
@@ -2,3 +2,14 @@
 This is the channel edit page
 
 </h1>
+
+
+<form method="POST" enctype="multipart/form-data">
+  <label for="input-name">Channel Name</label>
+  <input type="text" name="name" id="input-name" placeholder="Channel Name">
+  <label for="description">Desciption</label>
+  <textarea name="description" id="description" placeholder=" Desciption of the channel"></textarea>
+  <label for="picture">Picture</label>
+  <input type="file" name="picture" id="picture" accept="image/*" multiple />
+  <button>Create Channel</button>
+</form>
