--- a/views/channels/posts/singlepost.hbs
+++ b/views/channels/posts/singlepost.hbs
@@ -1,3 +1,19 @@
 <h1>
   This is the single post view
 </h1>
+
+
+
+{{#each post}}
+{{title}}
+{{description}}
+<img src="{{picture}}" alt="{{title}}">
+{{/each}}
+
+
+  <h4>Comments</h4>
+  {{#each comments}}
+    {{>comment}}
+  {{/each}}
+  <h4>Add a Comment</h4>
+  {{> commentform}}
