--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -12,6 +12,8 @@
 <body>
   <nav>
     <a href="/"><img src="/images/dy play one color.png" alt="Do you play logo" /></a>
+    <a href="/channels"> Channels </a>
+    <a href="/encounter"> Encounter </a>
     {{#if user}}
     <a href="/">{{user.name}}'s Profile</a>
     <form action="/authentication/sign-out" method="POST">
