--- a/views/channels/singleview.hbs
+++ b/views/channels/singleview.hbs
@@ -1,7 +1,7 @@
 <h1>
   Channel single view
 </h1>
-
+<a href="/channels/{{channel._id}}/edit"><Button>Edit channel</Button></a>
 {{#each channel}}
 {{name}}
 {{description}}
