host is showing everywhere

--- a/views/encounter/index.hbs
+++ b/views/encounter/index.hbs
@@ -7,7 +7,7 @@
 <div style="margin-bottom: 2em;">
 
 <li class="list-group-item"> eventName: {{eventName}}</li>
-<li class="list-group-item">host: {{host}}</li>
+<li class="list-group-item">host: {{host.name}}</li>
 <li class="list-group-item">location: {{location}}</li>
 <li class="list-group-item">date: {{date}}</li>
 <li class="list-group-item">numberOfPlayer: {{numberOfPlayer}}</li>
