--- a/views/encounter/single.hbs
+++ b/views/encounter/single.hbs
@@ -1,7 +1,7 @@
 
 <ul class="list-group-flush">
   <li class="list-group-item"><p>eventName: {{eventName}}</p></li>
-  <li class="list-group-item"><p>host: {{host}}</p></li>
+  <li class="list-group-item"><p>host: {{host.name}}</p></li>
   <li class="list-group-item"><p>location: latitude: {{location.coordinates.[1]}}, longitude: {{location.coordinates.[0]}}</p></li>
   <li class="list-group-item"><p>date: {{date}}</p></li>
   <li class="list-group-item"><p>numberOfPlayer: {{numberOfPlayer}}</p></li>
