--- a/views/sign-up.hbs
+++ b/views/sign-up.hbs
@@ -112,7 +112,8 @@
       </div>
     </div>
     <div class="mapSignUp">
-      <img src="/images/Mapa-Lisboa-goole-maps.jpg" alt="">
+      Chose your location:
+      {{>map}}
     </div>
     <button>Sign Up</button>
   </form>
