--- a/views/sign-up.hbs
+++ b/views/sign-up.hbs
@@ -112,7 +112,8 @@
       </div>
     </div>
     <div class="mapSignUp">
-      Chose your location:
+      <label for="input-location">Chose your location:</label>
+      <input type="string" id="input-location" name="location" />
       {{>map}}
     </div>
     <button>Sign Up</button>
