--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -24,8 +24,10 @@
     <a href="/authentication/sign-up">Sign Up</a>
     {{/if}}
   </nav>
-  {{{body}}}
 
+  <div class="bodyMain">
+    {{{body}}}
+  </div>
   <footer>
     <div><a href="#">Copyright © 2020</a></div>
     <div><a href="#">Contact us</a></div>
