--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -14,13 +14,20 @@ button,
   background-color: transparent; }
 
 body {
-  max-width: 100%;
-  height: max-content;
+  background-color: black;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
   font-family: sans-serif;
-  line-height: 2; }
+  line-height: 2;
+  position: relative; }
+
+.bodyMain {
+  background-color: white;
+  min-height: 700px; }
 
 .bodyIndex {
-  min-height: 730px;
+  align-self: center;
   margin: 0 10%;
   padding-bottom: 5%;
   align-content: center; }
@@ -35,8 +42,6 @@ a {
   text-decoration: none; }
 
 nav {
-  position: sticky;
-  top: 0;
   display: flex;
   align-items: center;
   background-color: lightgray;
@@ -137,20 +142,15 @@ textarea {
   align-self: center;
   margin: 0 auto; }
 
-.form-group,
-.list-group-flush,
-.signInMain {
-  min-height: 560px; }
-
 footer {
-  position: sticky;
-  bottom: 0;
-  top: 100%;
+  position: relative;
   display: flex;
+  width: 100%;
   align-self: flex-end;
   justify-content: space-between;
   background-color: grey;
-  height: 30px; }
+  height: 30px;
+  margin-top: auto; }
   footer img {
     width: 20px; }
     footer img:last-child {
