--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -23,14 +23,21 @@ button,
 }
 
 body {
-	max-width: 100%;
-	height: max-content;
+	background-color: black;
+	display: flex;
+	flex-direction: column;
+	width: 100%;
 	font-family: sans-serif;
 	line-height: 2;
+	position: relative;
 }
 
+.bodyMain {
+	background-color: white;
+	min-height: 700px;
+}
 .bodyIndex {
-	min-height: 730px;
+	align-self: center;
 	margin: 0 10%;
 	padding-bottom: 5%;
 	align-content: center;
@@ -49,8 +56,6 @@ a {
 }
 
 nav {
-	position: sticky;
-	top: 0;
 	display: flex;
 	align-items: center;
 	background-color: lightgray;
@@ -169,21 +174,22 @@ textarea {
 	margin: 0 auto;
 }
 
-.form-group,
-.list-group-flush,
-.signInMain {
-	min-height: 560px;
-}
+// .form-group,
+// .list-group-flush,
+// .signInMain,
+//  {
+// 	min-height: 560px;
+// }
 
 footer {
-	position: sticky;
-	bottom: 0;
-	top: 100%;
+	position: relative;
 	display: flex;
+	width: 100%;
 	align-self: flex-end;
 	justify-content: space-between;
 	background-color: grey;
 	height: 30px;
+	margin-top: auto;
 
 	img {
 		&:last-child {
