--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -23,7 +23,7 @@ button,
 }
 
 body {
-	background-color: black;
+	background-color: lightgray;
 	display: flex;
 	flex-direction: column;
 	width: 100%;
@@ -58,7 +58,7 @@ a {
 nav {
 	display: flex;
 	align-items: center;
-	background-color: lightgray;
+	background-color: lightblue;
 	width: 100%;
 	padding: 0 50px;
 	a,
@@ -187,7 +187,8 @@ footer {
 	width: 100%;
 	align-self: flex-end;
 	justify-content: space-between;
-	background-color: grey;
+	background-color: inherit;
+	padding: 0 20px;
 	height: 30px;
 	margin-top: auto;
 
