--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -5,13 +5,14 @@ input,
 textarea,
 button,
 .btn {
-  border: 1px solid rgba(191, 191, 191, 0.5);
+  border: 2px solid rgba(191, 191, 191, 0.5);
   border-radius: 1em;
   margin-bottom: 1em;
-  padding-left: 1em;
+  padding: 0 1em;
   font: inherit;
   color: black;
-  background-color: transparent; }
+  font-weight: bolder;
+  background-color: inherit; }
 
 body {
   background-color: lightgray;
