--- a/views/sign-up.hbs
+++ b/views/sign-up.hbs
@@ -112,10 +112,42 @@
       </div>
     </div>
     <div class="mapSignUp">
-      <label for="input-location">Chose your location:</label>
       {{>map}}
-      <input type="string" id="input-location" name="location" value="" />
-    </div>
-    <button>Sign Up</button>
+      <input type="number" step=0.0000001 name="lat" id="lat">
+      <input type="number" step=0.0000001 name="lng" id="lng">
+      <script>
+        const $lat = document.getElementById("lat")
+        const $lng = document.getElementById("lng")
+        const localUser = () => {
+          return new Promise((resolve, reject) => {
+            const sucessHandler = position => {
+              const data = {
+                lat: position.coords.latitude,
+                lng: position.coords.longitude,
+              };
+              resolve(data);
+            };
+            const errorHandler = error => {
+              reject(error);
+            };
+            navigator.geolocation.getCurrentPosition(sucessHandler, errorHandler);
+          });
+        }
+        localUser()
+          .then(value => {
+            $lat.value = value.lat
+            $lng.value = value.lng
+          })
+          .catch(error => {
+            console.log(error);
+          });
+      </script>
+
   </form>
+
+
+
+</div>
+<button>Sign Up</button>
+</form>
 </div>
