--- a/views/encounter/single.hbs
+++ b/views/encounter/single.hbs
@@ -1,12 +1,17 @@
 
 <ul class="list-group-flush">
-  <li class="list-group-item"><p>eventName: {{eventName}}</p></li>
-  <li class="list-group-item"><p>host: {{host.name}}</p></li>
-  <li class="list-group-item"><p>location: latitude: {{location.coordinates.[1]}}, longitude: {{location.coordinates.[0]}}</p></li>
-  <li class="list-group-item"><p>date: {{date}}</p></li>
-  <li class="list-group-item"><p>numberOfPlayer: {{numberOfPlayer}}</p></li>
-  <li class="list-group-item"><p>waitingList: {{ waitingList}}</p></li>
-  <li class="list-group-item"><p>game: {{gameList}}</p></li>
+  <li class="list-group-item">eventName: {{eventName}} </li>
+  <li class="list-group-item">host: {{host.name}} </li>
+  <li class="list-group-item">location: latitude: {{location.coordinates.[1]}}, longitude: {{location.coordinates.[0]}} </li>
+  <li class="list-group-item">date: {{date}} </li>
+  <li class="list-group-item">numberOfPlayer: {{numberOfPlayer}} </li>
+  <li class="list-group-item">waitingList: 
+    <br>
+    {{#each waitingList}}
+    {{ name }} <br>
+    {{/each}}</li>  
+  <a href="/encounter/single/{{ _id }}/join" class="btn btn-outline-success"> Join Event </a></li>
+  <li class="list-group-item">game: {{gameList}} </li>
   <li class="list-group-item"></li><br></li>
   <li class="list-group-item"><a href="/encounter/single/{{ _id }}/edit" class="btn btn-outline-success"> edit event </a></li>
   <li class="list-group-item"><form action="/encounter/single/{{ _id }}/delete" method="POST"><button class="btn btn-outline-danger"> delete event </button></form></li>
