--- a/views/channels/index.hbs
+++ b/views/channels/index.hbs
@@ -1,7 +1,8 @@
 <h1>
   this is the Page showing all the channels
   </h1>
-
+<a href="/channels/create"><Button>Create a new channel</Button></a>
+<br>
   {{#each data}}
   <a href="/channels/{{_id}}">{{name}}</a>
   {{timestamp}}
