bug sign up solved

--- a/views/partials/map.hbs
+++ b/views/partials/map.hbs
@@ -44,8 +44,8 @@
         const infoWindow = new window.google.maps.InfoWindow({
           content: 'You are here!',
           position: {
-            lat: value.lat,
-            lng: value.long
+            lat: value.latitude,
+            lng: value.longitude
           },
 
           map
