--- a/views/sign-up.hbs
+++ b/views/sign-up.hbs
@@ -115,7 +115,7 @@
       {{>map}}
       <input type="number" step=0.0000001 name="lat" id="lat">
       <input type="number" step=0.0000001 name="lng" id="lng">
-      <script>
+      {{!-- <script>
         const $lat = document.getElementById("lat")
         const $lng = document.getElementById("lng")
         const localUser = () => {
@@ -141,13 +141,10 @@
           .catch(error => {
             console.log(error);
           });
-      </script>
+      </script> --}}
 
+
+
+      <button>Sign Up</button>
   </form>
-
-
-
-</div>
-<button>Sign Up</button>
-</form>
 </div>
