--- a/views/encounter/single.hbs
+++ b/views/encounter/single.hbs
@@ -5,9 +5,14 @@
   <li class="list-group-item">location: latitude: {{location.coordinates.[1]}}, longitude: {{location.coordinates.[0]}} </li>
   <li class="list-group-item">date: {{date}} </li>
   <li class="list-group-item">numberOfPlayer: {{numberOfPlayer}} </li>
-  <li class="list-group-item">waitingList: 
+  <li class="list-group-item">Players List: 
     <br>
     {{#each waitingList}}
+    {{ name }} <br>
+    {{/each}}</li>  
+  <li class="list-group-item">Waiting List: 
+    <br>
+    {{#each players}}
     {{ name }} <br>
     {{/each}}</li>  
   <a href="/encounter/single/{{ _id }}/join" class="btn btn-outline-success"> Join Event </a></li>
