--- a/views/partials/map.hbs
+++ b/views/partials/map.hbs
@@ -2,14 +2,17 @@
 
 <script>
   const $sampleMap = document.getElementById('sample-map');
+  const $lat = document.getElementById("lat");
+  const $lng = document.getElementById("lng");
+
 
   const locateUser = () => {
     return new Promise((resolve, reject) => {
 
       const successHandler = position => {
         const data = {
-          latitude: position.coords.latitude,
-          longitude: position.coords.longitude
+          lat: position.coords.latitude,
+          lng: position.coords.longitude
         };
         resolve(data);
       };
@@ -28,10 +31,6 @@
       zoom: 12
     });
 
-    const marker = new window.google.maps.Marker({
-      position: {},
-      map
-    });
 
     const path = [];
 
@@ -55,6 +54,12 @@
         console.error(error);
       });
 
+    const marker = new window.google.maps.Marker({
+      position: {
+      },
+      map
+    });
+
     let pin;
 
     map.addListener('click', event => {
@@ -67,7 +72,6 @@
       if (pin) {
         pin.setMap(null);
       }
-
       pin = new window.google.maps.Marker({
         position,
         map
@@ -75,6 +79,8 @@
     });
   }
 </script>
+<input type="number" value=0 step=0.0000001 name="lat" id="lat">
+<input type="number" value=0 step=0.0000001 name="lng" id="lng">
 
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBrJ1f_9MB0iFA2zFsHIbIK8sGWU91aQr8&callback=initMap" async
   defer></script>
