--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -155,6 +155,13 @@ form {
 	}
 }
 
+.LatLng {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: space-around;
+}
+
 #sample-map {
 	width: 500px;
 	height: 500px;
