--- a/views/encounter/create.hbs
+++ b/views/encounter/create.hbs
@@ -10,10 +10,7 @@
   </div>
 
   <div class="form-group">
-    <label for="Latitude Longitude"> Location </label>
-    <input type="number" placeholder="Latitude" name="latitude" step="any" class="form-control">
-    <br>
-    <input type="number" placeholder="Longitude" name="longitude" step="any" class="form-control">
+    {{>map}}
   </div>
   
   <div class="form-group">
@@ -34,6 +31,4 @@
       {{/each}}
   </div>
 
-  <button type="submit" class="btn btn-primary"> Submit </button>
-  
 </form>
