--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -15,7 +15,6 @@ button,
   background-color: inherit; }
 
 body {
-  background-color: lightgray;
   display: flex;
   flex-direction: column;
   width: 100%;
@@ -153,12 +152,11 @@ footer {
   position: relative;
   display: flex;
   width: 100%;
-  align-self: flex-end;
   justify-content: space-between;
   background-color: inherit;
   padding: 0 20px;
   height: 30px;
-  margin-top: auto; }
+  bottom: 0; }
   footer img {
     width: 20px; }
     footer img:last-child {
