--- a/views/private.hbs
+++ b/views/private.hbs
@@ -3,3 +3,4 @@
 <span><strong>Name</strong>: {{user.name}}</span>
 <br />
 <span><strong>Email</strong>: {{user.email}}</span>
+<img src="{{user.picture}}" alt="">
