--- a/views/encounter/single.hbs
+++ b/views/encounter/single.hbs
@@ -5,19 +5,21 @@
   <li class="list-group-item">location: latitude: {{location.coordinates.[1]}}, longitude: {{location.coordinates.[0]}} </li>
   <li class="list-group-item">date: {{date}} </li>
   <li class="list-group-item">numberOfPlayer: {{numberOfPlayer}} </li>
+  
   <li class="list-group-item">Players List: 
     <br>
     {{#each waitingList}}
     {{ name }} <br>
-    <form action="/encounter/single/{{ id }}/deletePlayer" method="POST"><button class="btn btn-outline-danger"> delete player </button></form>
     {{/each}}</li>  
   <li class="list-group-item">Waiting List: 
     <br>
     {{#each players}}
     {{ name }} <br>
-    <form action="/encounter/single/{{ id }}/deletePlayer" method="POST"><button class="btn btn-outline-danger"> delete player </button></form>
     {{/each}}</li>  
+
   <a href="/encounter/single/{{ _id }}/join" class="btn btn-outline-success"> Join Event </a></li>
+  <form action="/encounter/single/{{ _id }}/deletePlayer" method="POST"><button class="btn btn-outline-danger"> Leave Event </button></form>
+
   <li class="list-group-item">game: {{gameList}} </li>
   <li class="list-group-item"></li><br></li>
   <li class="list-group-item"><a href="/encounter/single/{{ _id }}/edit" class="btn btn-outline-success"> edit event </a></li>
