--- a/views/channels/index.hbs
+++ b/views/channels/index.hbs
@@ -1,11 +1,33 @@
-<h1>
-  this is the Page showing all the channels
-  </h1>
-<a href="/channels/create"><Button>Create a new channel</Button></a>
-<br>
-  {{#each data}}
-  <a href="/channels/{{_id}}">{{name}}</a>
-  {{timestamp}}
-  <br>
-  {{/each}}
+<h1>Channels</h1>
+<section class="sectionComments">
 
+
+<div class="channel">
+
+  {{#each data}}
+  <aside class="channelProp">
+  <a href="/channels/{{_id}}">{{name}}</a>
+{{timestamp}}
+  </aside>
+  {{/each}}
+</div>
+
+<div>
+  <aside>
+<a href="/channels/create"><Button>Create a new channel</Button></a>
+<h3>Trending channels</h3>
+<a href="#">Trending channel 1</a><br>
+<a href="#">Trending channel 2</a><br>
+<a href="#">Trending channel 3</a><br>
+<a href="#">Trending channel 4</a><br>
+<h4>Online Now</h4>
+<a href="#">Online player 1</a><br>
+<a href="#">Online player 2</a><br>
+<a href="#">Online player 3</a><br>
+
+
+
+
+  </aside>
+</div>
+</section>
