--- a/views/sign-up.hbs
+++ b/views/sign-up.hbs
@@ -21,94 +21,11 @@
       <h2>Game You Play</h2>
       <div class="listGamesSignUp">
         <div class="formInline">
-          <input class="form-check-input" type="checkbox" id="inlineCheckbox" value="option1">
-          <label class="form-check-label" for="inlineCheckbox">Dungeons and Dragons</label>
+          {{#each gameList as |item|}}
+            <input class="form-check-input" type="checkbox" id="inlineCheckbox" value="option1">
+            <label class="form-check-label" for="inlineCheckbox">{{item}}</label>
+          {{/each}}
         </div>
-        <div class="formInline">
-          <input class="form-check-input" type="checkbox" id="inlineCheckbox" value="option2">
-          <label class="form-check-label" for="inlineCheckbox">Monopoly</label>
-        </div>
-        <div class="formInline">
-          <input class="form-check-input" type="checkbox" id="inlineCheckbox" value="option3">
-          <label class="form-check-label" for="inlineCheckbox">Catan</label>
-        </div>
-        <div class="formInline">
-          <input class="form-check-input" type="checkbox" id="inlineCheckbox" value="option4">
-          <label class="form-check-label" for="inlineCheckbox">Qwirkle</label>
-        </div>
-        <div class="formInline">
-          <input class="form-check-input" type="checkbox" id="inlineCheckbox" value="option5">
-          <label class="form-check-label" for="inlineCheckbox">Risk</label>
-        </div>
-        <div class="formInline">
-          <input class="form-check-input" type="checkbox" id="inlineCheckbox" value="option6">
-          <label class="form-check-label" for="inlineCheckbox">Axis and Allies</label>
-        </div>
-        <div class="formInline">
-          <input class="form-check-input" type="checkbox" id="inlineCheckbox" value="option7">
-          <label class="form-check-label" for="inlineCheckbox">Cluedo</label>
-        </div>
-        <div class="formInline">
-          <input class="form-check-input" type="checkbox" id="inlineCheckbox" value="option8">
-          <label class="form-check-label" for="inlineCheckbox">Battleship</label>
-        </div>
-        <div class="formInline">
-          <input class="form-check-input" type="checkbox" id="inlineCheckbox" value="option9">
-          <label class="form-check-label" for="inlineCheckbox">Jenga</label>
-        </div>
-        <div class="formInline">
-          <input class="form-check-input" type="checkbox" id="inlineCheckbox" value="option10">
-          <label class="form-check-label" for="inlineCheckbox">Trivial Pursuit</label>
-        </div>
-        <div class="formInline">
-          <input class="form-check-input" type="checkbox" id="inlineCheckbox" value="option11">
-          <label class="form-check-label" for="inlineCheckbox">Twister</label>
-        </div>
-        <div class="formInline">
-          <input class="form-check-input" type="checkbox" id="inlineCheckbox" value="option12">
-          <label class="form-check-label" for="inlineCheckbox">Blokus</label>
-        </div>
-        <div class="formInline">
-          <input class="form-check-input" type="checkbox" id="inlineCheckbox" value="option13">
-          <label class="form-check-label" for="inlineCheckbox">Connect Four</label>
-        </div>
-        <div class="formInline">
-          <input class="form-check-input" type="checkbox" id="inlineCheckbox" value="option14">
-          <label class="form-check-label" for="inlineCheckbox">Operation</label>
-        </div>
-        <div class="formInline">
-          <input class="form-check-input" type="checkbox" id="inlineCheckbox" value="option15">
-          <label class="form-check-label" for="inlineCheckbox">Cards Against Humanity</label>
-        </div>
-        <div class="formInline">
-          <input class="form-check-input" type="checkbox" id="inlineCheckbox" value="option16">
-          <label class="form-check-label" for="inlineCheckbox">Exploding Kittens</label>
-        </div>
-        <div class="formInline">
-          <input class="form-check-input" type="checkbox" id="inlineCheckbox" value="option17">
-          <label class="form-check-label" for="inlineCheckbox">Cranium</label>
-        </div>
-        <div class="formInline">
-          <input class="form-check-input" type="checkbox" id="inlineCheckbox" value="option18">
-          <label class="form-check-label" for="inlineCheckbox">Life</label>
-        </div>
-        <div class="formInline">
-          <input class="form-check-input" type="checkbox" id="inlineCheckbox" value="option19">
-          <label class="form-check-label" for="inlineCheckbox">Pictionary</label>
-        </div>
-        <div class="formInline">
-          <input class="form-check-input" type="checkbox" id="inlineCheckbox" value="option20">
-          <label class="form-check-label" for="inlineCheckbox">Mikado</label>
-        </div>
-        <div class="formInline">
-          <input class="form-check-input" type="checkbox" id="inlineCheckbox" value="option21">
-          <label class="form-check-label" for="inlineCheckbox">Chess</label>
-        </div>
-        <div class="formInline">
-          <input class="form-check-input" type="checkbox" id="inlineCheckbox" value="option22">
-          <label class="form-check-label" for="inlineCheckbox">Other</label>
-        </div>
-
       </div>
     </div>
     <div class="mapSignUp">
