--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -2,183 +2,184 @@ $font-sans: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 $grey: hsla(0, 0, 75%, 0.5);
 
 * {
-  &,
-  &:before,
-  &:after {
-    box-sizing: border-box;
-  }
+	&,
+	&:before,
+	&:after {
+		box-sizing: border-box;
+	}
 }
 
 input,
 textarea,
 button,
 .btn {
-  border: 2px solid $grey;
-  border-radius: 1em;
-  margin-bottom: 1em;
-  padding: 0 1em;
-  font: inherit;
-  color: black;
-  font-weight: bolder;
-  background-color: inherit;
+	border: 2px solid $grey;
+	border-radius: 1em;
+	margin-bottom: 1em;
+	padding: 0 1em;
+	font: inherit;
+	color: black;
+	font-weight: bolder;
+	background-color: inherit;
 }
 
 body {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  font-family: sans-serif;
-  line-height: 2;
-  position: relative;
+	display: flex;
+	flex-direction: column;
+	width: 100%;
+	font-family: sans-serif;
+	line-height: 2;
+	position: relative;
 }
 
 .bodyMain {
-  background-color: white;
-  min-height: 700px;
+	background-color: white;
+	min-height: 700px;
 }
 .bodyIndex {
-  align-self: center;
-  margin: 0 10%;
-  padding-bottom: 5%;
-  align-content: center;
-  .imageSignUp {
-    display: flex;
-  }
-  img {
-    width: 30%;
-    margin: 0 auto;
-  }
+	align-self: center;
+	margin: 0 10%;
+	padding-bottom: 5%;
+	align-content: center;
+	.imageSignUp {
+		display: flex;
+	}
+	img {
+		width: 30%;
+		margin: 0 auto;
+	}
 }
 
 a {
-  color: inherit;
-  text-decoration: none;
+	color: inherit;
+	text-decoration: none;
 }
 
 nav {
-  display: flex;
-  align-items: center;
-  background-color: lightblue;
-  width: 100%;
-  padding: 0 50px;
-  a,
-  button {
-    display: flex;
-    margin-right: 2em;
-    margin: auto;
-    &:not(:last-child) {
-      margin: 0 50px;
-    }
-    &:not(:first-child) {
-      margin: 1em;
-      padding: 0px;
-    }
-    &:first-child {
-      margin-right: auto;
-    }
+	display: flex;
+	align-items: center;
+	background-color: lightblue;
+	width: 100%;
+	padding: 0 50px;
+	a,
+	button {
+		display: flex;
+		margin-right: 2em;
+		margin: auto;
+		&:not(:last-child) {
+			margin: 0 50px;
+		}
+		&:not(:first-child) {
+			margin: 1em;
+			padding: 0px;
+		}
+		&:first-child {
+			margin-right: auto;
+		}
 
-    img {
-      align-self: flex-start;
-      height: 80px;
-      width: 150px;
-      margin: auto;
-    }
-  }
+		img {
+			align-self: flex-start;
+			height: 80px;
+			width: 150px;
+			margin: auto;
+		}
+	}
 }
 
 h1,
 h2,
 h3,
 p {
-  margin: 0;
-  line-height: inherit;
-  &:not(:last-child) {
-    margin-bottom: 1rem;
-  }
+	margin: 0;
+	line-height: inherit;
+	&:not(:last-child) {
+		margin-bottom: 1rem;
+	}
 }
 
 img {
-  width: 100%;
-  max-width: 100%;
+	width: 100%;
+	max-width: 100%;
 }
 
 form {
-  display: flex;
-  flex-direction: column;
+	display: flex;
+	flex-direction: column;
 }
 
 .signUpMain {
-  display: flex;
-  flex-direction: column;
-  padding-bottom: 10px;
-  button {
-    margin: auto;
-    padding: 10px 20px;
-  }
-  .imageSignUp {
-    max-width: 300px;
-    align-self: center;
-  }
-  .signUpName {
-    display: flex;
-    flex-direction: column;
-  }
-  .formMain,
-  .gameYouPlay {
-    align-items: center;
-    justify-content: space-evenly;
-    display: flex;
-    flex-direction: row;
-  }
-  .gameYouPlay {
-    flex-direction: column;
-    margin: 0 20%;
-  }
-  .listGamesSignUp {
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: center;
-    .formInline {
-      padding: 0 0.8em;
-    }
-  }
-  .inputPicture {
-    align-self: flex-start;
-    display: flex;
-    flex-direction: column;
-  }
-  .mapSignUp {
-    margin: 50px;
-    max-width: 850px;
-    align-self: center;
-  }
+	display: flex;
+	flex-direction: column;
+	padding-bottom: 10px;
+	button {
+		margin: auto;
+		padding: 10px 20px;
+	}
+	.imageSignUp {
+		max-width: 300px;
+		align-self: center;
+	}
+	.signUpName {
+		display: flex;
+		flex-direction: column;
+	}
+	.formMain,
+	.gameYouPlay {
+		align-items: center;
+		justify-content: space-evenly;
+		display: flex;
+		flex-direction: row;
+	}
+	.gameYouPlay {
+		flex-direction: column;
+		margin: 0 20%;
+	}
+	.listGamesSignUp {
+		display: flex;
+		flex-flow: row wrap;
+
+		.formInline {
+			margin: 1em;
+			justify-self: flex-start;
+		}
+	}
+	.inputPicture {
+		align-self: flex-start;
+		display: flex;
+		flex-direction: column;
+	}
+	.mapSignUp {
+		margin: 50px;
+		max-width: 850px;
+		align-self: center;
+	}
 }
 
 .LatLng {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-around;
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: space-around;
 }
 
 #sample-map {
-  width: 500px;
-  height: 500px;
+	width: 500px;
+	height: 500px;
 }
 
 .signInMain {
-  margin: 0 20%;
+	margin: 0 20%;
 }
 
 textarea {
-  min-height: 8em;
-  resize: vertical;
+	min-height: 8em;
+	resize: vertical;
 }
 
 .imageSignIn {
-  max-width: 300px;
-  align-self: center;
-  margin: 0 auto;
+	max-width: 300px;
+	align-self: center;
+	margin: 0 auto;
 }
 
 // .form-group,
@@ -189,52 +190,51 @@ textarea {
 // }
 
 footer {
-  position: relative;
-  display: flex;
-  width: 100%;
-  justify-content: space-between;
-  background-color: inherit;
-  padding: 0 20px;
-  height: 30px;
-  bottom: 0;
+	position: relative;
+	display: flex;
+	width: 100%;
+	justify-content: space-between;
+	background-color: inherit;
+	padding: 0 20px;
+	height: 30px;
+	bottom: 0;
 
-  img {
-    &:last-child {
-      margin-right: 0.5em;
-    }
-    width: 20px;
-  }
+	img {
+		&:last-child {
+			margin-right: 0.5em;
+		}
+		width: 20px;
+	}
 }
 
 .sectionComments {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: top;
-  margin: 2em;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	align-items: top;
+	margin: 2em;
 }
 .channel {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  justify-self: center;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	justify-self: center;
 	align-items: top;
-	}
+}
 .channelDesc {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  justify-self: center;
-  align-self: center;
-  font-size: 1.5em;
-  
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	justify-self: center;
+	align-self: center;
+	font-size: 1.5em;
 }
 .channelProp {
-  margin: 1em;
-  padding: 1em;
-  border: 2px solid grey;
-  border-radius: 15px;
+	margin: 1em;
+	padding: 1em;
+	border: 2px solid grey;
+	border-radius: 15px;
 }
 .channelImg {
-  width: 50px;
+	width: 50px;
 }
